--- a/css/style.css
+++ b/css/style.css
@@ -531,7 +531,7 @@ margin-top: 5px;
 }
 
 .reviews_item {
-padding-left: 205px;
+padding-left: 245px;
 position: relative;
 }
 
@@ -543,6 +543,7 @@ position: relative;
     z-index: 1;
 
 }
+
 
 
 .reviews_text {
@@ -641,4 +642,84 @@ transition: background .1s linear, color .1s linear;
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+/* Works */
+
+.works {
+    display: flex;
+}
+.works_col {
+    flex: 1 1 0;
+}
+
+.works_item {
+    position: relative;
+
+    background: linear-gradient(to bottom, #f38181, #fce38a);
+}
+.works_item:hover .works_image {
+opacity: .1;
+}
+
+.works_item:hover .works_info {
+    opacity: 1;
+}
+
+.works_image {
+    width: 100%;
+    display: block;
+    height: auto;
+
+    transition: opacity .2s linear;
+    
+   
+}
+
+.works_info {
+    width: 100%;
+    padding: 0 15px;
+
+    text-align: center;
+    color:#fff;
+    opacity: 0;
+
+    position: absolute;
+    top: 50%;
+    left: 0;
+    z-index: 1;
+    
+    transform: translate3d(0, -50%, 0);
+    transition: opacity .2s linear;
+    
+    
+    
+}
+
+
+
+
+.works_title {
+    margin-bottom: 5px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight:400;
+    font-size: 14px;
+    text-transform: uppercase;
+    
+}
+
+.works_text {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    font-size: 15px;
+    font-style: italic;
+}
+
+.reviews_photo_works {
+    border:2px solid #95e1d3;
+    border-radius: 50%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
 }
