--- a/css/style.css
+++ b/css/style.css
@@ -787,14 +787,17 @@ opacity: .1;
 /* Blog */
 .blog {
     display: flex;
+    justify-content: space-between;
 
 }
 
 .blog_item {
-    width: 30%;
+    width: 31%;
+
 }
 .blog_header {
     position: relative;
+    margin-bottom: 14px;
 }
 .blog_photo {
     display: block;
@@ -802,12 +805,15 @@ opacity: .1;
     height: auto;
 }
 .blog_date {
-   background-color: #95e1d3;
+    padding: 10px 20px;
+    background-color: #95e1d3;
 
 
    color: #fff;
-
-
+    font-weight: 300;
+    text-align: center;
+    font-size: 15px;
+    font-style: italic;
     position: absolute;
     bottom: 10px;
     left: -10px;
@@ -817,5 +823,58 @@ opacity: .1;
 .blog_date_day {
     font-size: 30px;
     font-weight: 700;
+    font-style: normal;
+
+    line-height: 1;
     
+}
+
+.blog_content {
+    margin-bottom: 14px;
+}
+
+.blog_title {
+    margin-bottom: 10px;
+
+    font-size: 14px;
+    color: #333;
+    text-transform: uppercase;
+}
+
+.blog_title a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.blog_title a:hover {
+    text-decoration: underline;
+}
+
+.blog_text {
+    font-family: 'Roboto', sans-serif;
+
+    font-size: 15px;
+    font-weight: 400;
+
+    color: #999999;
+
+}
+
+.blog_footer {
+    padding-top: 14px;
+    border-top: 1px solid #e5e5e5;
+
+    font-size: 15px;
+    font-weight: 300;
+    font-style: italic;
+    color:#999;
+}
+.blog-stat_item {
+    display: inline-block;
+    vertical-align: top;
+    margin-right: 10px;
+
+}
+.blog-stat_item i {
+    color:#95e1d3;
 }
