--- a/css/style.css
+++ b/css/style.css
@@ -230,6 +230,14 @@ z-index: 1;
     background-size: cover;
 }
 
+.section--map {
+    padding: 40px 0;
+    background: #e6e6e6
+    url(../images/images/map_bg.jpg)
+    center no-repeat;
+    
+}
+
 
 .section_header {
     width: 100%;
@@ -878,3 +886,36 @@ opacity: .1;
 .blog-stat_item i {
     color:#95e1d3;
 }
+
+/* Map */
+.map {
+    text-align: center;
+    
+}
+
+.map_title {
+    font-size: 24px;
+    font-weight: bold;
+    color:#f38181;
+    text-transform: uppercase;
+    
+}
+
+.map_title:after {
+    content: "";
+    display: block;
+    width: 60px;
+    height: 3px;
+    background-color:#f38181;
+    margin: 22px auto;
+}
+
+.map_title a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.map_title a:hover {
+    text-decoration: underline;
+}
+
