--- a/css/style.css
+++ b/css/style.css
@@ -919,3 +919,108 @@ opacity: .1;
     text-decoration: underline;
 }
 
+/* Footer */
+.footer {
+    padding-top: 65px;
+    background-color: #f8f8f8;
+}
+
+.footer_inner {
+   padding-bottom: 65px;
+}
+
+.footer_logo {
+    font-size: 46px;
+    font-weight: 700;
+    
+    color: #cccccc;
+
+    padding-bottom:43px;
+}
+.footer_text {
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+    color:#999;
+
+    margin-bottom: 43px;
+}
+
+.footer_social {
+    margin-bottom: 25px;
+}
+
+.footer_social-header {
+    padding-bottom: 15px;
+    font-size: 14px;
+    color:#333;
+
+    border-bottom: 1px solid #e5e5e5;
+}
+.footer_social-header b {
+    font-size: 18px;
+
+}
+
+.footer_social-content {
+    font-family: 'Roboto', sans-serif;
+   padding-top: 15px;
+   font-size: 15px;
+   font-style: italic;
+   font-weight: 300;
+   color: #b4b4b4;
+
+}
+
+.footer_social-content a {
+   display: inline-block;
+   vertical-align: middle;
+   margin-left: 10px;
+   padding-right: 15px;
+   font-size: 18px;
+    color: #95e1d3;
+}
+
+/* Subscribe */
+
+.subscribe {
+    width: 100%;
+    max-width: 380px;
+    display: flex;
+}
+
+.subscribe_input {
+    width: 60%;
+    padding: 12px;
+    height: 40px;
+    background: #fff;
+    border: 1px solid #e7e7e7;
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    line-height: 1.1;
+    font-style: italic;
+    color: #333;
+    font-weight: 300;
+}
+
+.subscribe_input::placeholder {
+    color: #cccccc;
+}
+
+
+.subscribe_btn {
+    width: 40%;
+    height: 40px;
+    padding: 12px 30px;
+    background-color: #95e1d3;
+    border: 0;
+    cursor: pointer;
+    font-family: 'Montserrat', sans-serif;
+
+    font-size: 14px;
+    line-height: 1.1;
+    font-weight: 700;
+   
+    color: #ffffff;
+    text-transform: uppercase;
+}
