--- a/css/style.css
+++ b/css/style.css
@@ -926,7 +926,20 @@ opacity: .1;
 }
 
 .footer_inner {
+    display: flex;
+    justify-content: space-between;
    padding-bottom: 65px;
+}
+
+.footer_col--first {
+    width: 40%;
+}
+
+.footer_col--second {
+    width: 29%;
+}
+.footer_col--third {
+    width: 22%;
 }
 
 .footer_logo {
@@ -937,6 +950,18 @@ opacity: .1;
 
     padding-bottom:43px;
 }
+
+.footer_title{
+    margin: 30px 0;
+
+    font-weight: 400;
+    font-size: 14px;
+    font-weight: 700;
+
+    color:#333;
+    text-transform: uppercase;
+}
+
 .footer_text {
     font-family: 'Roboto', sans-serif;
     font-size: 15px;
@@ -995,6 +1020,7 @@ opacity: .1;
     height: 40px;
     background: #fff;
     border: 1px solid #e7e7e7;
+    border-right: 0;
     font-family: 'Roboto', sans-serif;
     font-size: 15px;
     line-height: 1.1;
@@ -1005,6 +1031,11 @@ opacity: .1;
 
 .subscribe_input::placeholder {
     color: #cccccc;
+}
+
+.subscribe_input:focus {
+    outline: 0;
+    border-color: #95e1d3;
 }
 
 
@@ -1023,4 +1054,15 @@ opacity: .1;
    
     color: #ffffff;
     text-transform: uppercase;
+
+    transition: background .2s linear;
 }
+
+.subscribe_btn:hover {
+    background-color: #4fa796;
+}
+
+.subscribe_btn:focus {
+    outline: 0;
+}
+
