--- a/css/style.css
+++ b/css/style.css
@@ -1006,6 +1006,65 @@ opacity: .1;
     color: #95e1d3;
 }
 
+
+/* Blogs */
+
+.blogs_item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+}
+
+.blogs_img {
+    width: 120px;
+    height: 89px;
+}
+
+.blogs_content {
+    padding-left: 20px;
+}
+.blogs_title {
+    display: block;
+    margin-bottom: 5px;
+    color: #333;
+    font-size: 12px;
+    line-height: 1.5;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+
+
+.blogs_title:hover {
+    text-decoration: underline;
+}
+
+.blogs_date {
+    font-family: 'Roboto', sans-serif;
+    font-style:italic;
+    font-weight: 300;
+    font-size: 13px;
+    color: #b1b1b1;
+}
+
+
+/* Instagram */
+
+.instagram {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.instagram_item {
+    width: 32.3333%;
+    flex: 1 1 0;
+    border-bottom: 1px solid #fff;
+}
+
+.instagram_item img {
+    display: block;
+}
+
 /* Subscribe */
 
 .subscribe {
@@ -1066,3 +1125,20 @@ opacity: .1;
     outline: 0;
 }
 
+/* Copyright */
+
+.copyright {
+    padding:20px 0;
+
+    border-top: 1px solid #e5e5e5;
+
+    text-align: center;
+
+    font-size: 14px;
+    color: #333;
+    font-weight: 400;
+}
+
+.copyright span {
+    color: #f4a4a4;
+}
