--- a/css/style.css
+++ b/css/style.css
@@ -280,13 +280,16 @@ z-index: 1;
 /*card*/
 
 .card {
+    margin: 80px -15px 0;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     margin-top: 80px;
 }
 
 .card_item {
-width: 380px;
+width: 33.33333%;
+padding: 0 15px;
 
 
 }
@@ -318,7 +321,9 @@ width: 380px;
 
 .card_img img {
     display: block;
-transition: opacity .1s linear;
+    min-width: 100%;
+    height: auto;
+    transition: opacity .1s linear;
 }
 
 .card_text {
@@ -368,6 +373,7 @@ background-color: #95e1d3;
 
 .stat{
     display: flex;
+    flex-wrap: wrap;
 
 }
 
@@ -401,14 +407,16 @@ background-color: #95e1d3;
 /*Services*/
 .services {
 display: flex;
+flex-wrap:wrap;
 
 }
 
 .services_item {
-    flex: 1 1 0;
+    width: 33.3333%;
     padding-left: 85px;
     padding-right: 20px;
     position: relative;
+    margin-bottom: 30px;
 }
 
 .services_icon {
@@ -1141,4 +1149,123 @@ opacity: .1;
 
 .copyright span {
     color: #f4a4a4;
+}
+
+/* Responsive */
+@media (max-width: 1230px) {
+    /* Intro */
+    .intro_suptitle {
+        font-size: 52px;
+    }
+    .intro_title {
+        font-size: 120px;
+    }
+}
+
+@media (max-width: 990px) {
+    /* Intro */
+    .intro_suptitle {
+        font-size: 32px;
+    }
+
+        .intro_title {
+            font-size: 80px;      
+        }
+
+        /* Stat */
+
+        .stat {
+            justify-content: center;
+        }
+
+        .stat_item {
+            flex: none;
+            width:33.33333%;
+            padding-top: 30px;
+            padding-bottom: 30px;
+
+            border: 0;
+        }
+
+        .stat_item:last-child {
+            border-right: 0;
+        }
+}
+
+@media (max-width: 770px) {
+    /* Nav */
+    .nav {
+        display: none;
+    }
+
+    /* Section */
+
+    .section {
+        padding: 40px 0;
+    }
+
+    /* Card */
+    .card {
+        margin-top: 50px;
+        justify-content: center;
+    }
+    
+    
+    .card_item {
+        width: 100%;
+        min-width: 410px;
+        margin-bottom: 30px;
+    }
+
+    .card_item:last-child {
+        margin-bottom: 0;
+    }
+
+
+    /* Slider */
+    .slider_text {
+        display: none;
+    }
+    .slider_item.active:before {
+        width: 50%;
+    }
+}
+
+@media (max-width: 575px) {
+    /* Intro */
+
+    .intro_suptitle {
+     font-size: 22px;
+    }
+    .intro_title {
+        font-size: 40px;      
+    }
+    /* Section */
+    .section_header {
+        margin-bottom: 50px;
+    }
+
+    .section_suptitle {
+        font-size: 20px;
+    }
+
+    .section_title {
+        font-size: 24px;
+    }
+  
+    .section_title:after {
+        margin: 20px auto;
+    }
+    /* Stat */
+    .stat_item {
+        width: 100%;
+
+        border-bottom: 1px solid #b5eae0;
+    }
+    .stat_item:last-child {
+        border-bottom: 0;
+    }
+    .stat_count {
+        font-size: 52px;
+    }
 }
