--- a/css/style.css
+++ b/css/style.css
@@ -21,14 +21,21 @@ hr {
     height: 1px;
     border: 0;
     margin: 40px 0;
-
     background-color: #e5e5e5;
 }
+
+.page {
+    overflow:hidden;
+}
+
+    
+
 /* Container */
 .container {
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
+    padding: 0 15px;
 }
 
 /* Intro */
@@ -321,19 +328,19 @@ padding: 0 15px;
 
 .card_img img {
     display: block;
-    min-width: 100%;
+    max-width: 100%;
     height: auto;
     transition: opacity .1s linear;
 }
 
 .card_text {
-    font-size: 18x;
+    font-size: 18px;
     font-weight: bold;
     color:#fff;
     text-transform: uppercase;
     text-align: center;
     width: 100%;
-     opacity: 0;
+    opacity: 0;
 
     position: absolute;
     top: 50%;
@@ -575,6 +582,8 @@ position: relative;
 }
 
 .reviews_photo {
+    width: 210px;
+    height: 210px;
     border:2px solid #95e1d3;
     position: absolute;
     top: 0;
@@ -681,6 +690,16 @@ transition: background .1s linear, color .1s linear;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 -15px;
+}
+
+.logos_item {
+    padding: 0 15px;
+}
+.logos_img {
+    display: block;
+    min-width: 100%;
+    height: auto;
 }
 
 /* Works */
@@ -729,10 +748,7 @@ opacity: .1;
     z-index: 1;
     
     transform: translate3d(0, -50%, 0);
-    transition: opacity .2s linear;
-    
-    
-    
+    transition: opacity .2s linear; 
 }
 
 
@@ -743,8 +759,7 @@ opacity: .1;
     font-family: 'Montserrat', sans-serif;
     font-weight:400;
     font-size: 14px;
-    text-transform: uppercase;
-    
+    text-transform: uppercase;   
 }
 
 .works_text {
@@ -755,6 +770,9 @@ opacity: .1;
 }
 
 .reviews_photo_works {
+    display: block;
+    width: 210px;
+    height: 210px;
     border:2px solid #95e1d3;
     border-radius: 50%;
     position: absolute;
@@ -818,6 +836,7 @@ opacity: .1;
 /* Blog */
 .blog {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
 
 }
@@ -950,8 +969,14 @@ opacity: .1;
 
 .footer_inner {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
+    margin: 0 -15px;
    padding-bottom: 65px;
+}
+
+.footer_col {
+    padding: 0 15px;
 }
 
 .footer_col--first {
@@ -1079,13 +1104,14 @@ opacity: .1;
 }
 
 .instagram_item {
-    width: 32.3333%;
-    flex: 1 1 0;
+    width: 33%;
     border-bottom: 1px solid #fff;
 }
 
 .instagram_item img {
     display: block;
+    max-width: 100%;
+    height: auto;
 }
 
 /* Subscribe */
@@ -1175,9 +1201,15 @@ opacity: .1;
     .intro_title {
         font-size: 120px;
     }
+    /* Reviews */
+    .reviews_text {
+        font-size: 20px;
+    }
 }
 
 @media (max-width: 990px) {
+
+    
     /* Intro */
     .intro_suptitle {
         font-size: 32px;
@@ -1202,9 +1234,20 @@ opacity: .1;
             border: 0;
         }
 
+        .stat_count {
+            margin-bottom: 0;
+            font-size: 65px;
+        }
+
         .stat_item:last-child {
             border-right: 0;
         }
+
+        /*Accordion  */
+        .accordion {
+            padding: 0 10px;
+        }
+
         /* Services */
         .services_item {
             width: 50%;
@@ -1214,6 +1257,56 @@ opacity: .1;
         .services_item--border {
             border-bottom: 0;
         }
+        /* Reviews */
+
+        .reviews {
+            padding: 0 60px;
+        }
+
+        .reviews_photo {
+            width: 150px;
+            height: 150px;
+        }
+
+        .reviews_photo_works {
+            width: 150px;
+            height: 150px;
+        }
+        .reviews_item {
+            padding-left: 175px;
+        }
+        /* Clients */
+
+        .clients {
+            max-width: 600px;
+            margin: 0 auto;
+        }
+
+        .clients_item {
+            width: 100%;
+            padding-right: 0;
+        }
+        .clients_text:last-child {
+            margin-bottom: 0;
+        }
+        /* Footer */
+        .footer_col--first {
+            width: 100%;
+        }
+        .footer_col--second, 
+        .footer_col--third  {
+            width: 50%;
+        }
+        /* Instagram */
+        .instagram {
+            justify-content: flex-start;
+        }
+
+        .instagram_item {
+            width: auto;
+            border-right: 1px solid white;
+        }
+        
 }
 
 @media (max-width: 770px) {
@@ -1237,13 +1330,17 @@ opacity: .1;
     
     .card_item {
         width: 100%;
-        min-width: 410px;
+        max-width: 410px;
         margin-bottom: 30px;
     }
 
     .card_item:last-child {
         margin-bottom: 0;
     }
+    
+    /* .clients_photo {
+        width: 100%;
+    } */
 
 
     /* Slider */
@@ -1279,9 +1376,73 @@ opacity: .1;
     .wedo-item {
         width: 100%;
     }
+    /* Reviews */
+
+    .reviews_photo {
+        display: flex;
+        width: 150px;
+        height: 150px;
+        position: static;
+        margin: 0 auto 20px;
+    }
+    
+    .reviews_photo_works {
+        
+        position: static;
+        margin: 0 auto 20px;
+    }
+
+    .reviews_item {
+        padding-left: 0;
+    }
+    .reviews_text {
+        font-size: 16px;
+    }
+    .reviews_author {
+        font-size: 20px;
+    }
+    /* Logos */
+    .logos {
+        flex-wrap: wrap;
+    }
+
+    /* Works */
+     .works {
+         flex-wrap: wrap;
+     }
+
+    .works_col {
+        flex:none;
+        width: 50%;
+    }
+    /* Blog */
+
+    .blog {
+        max-width: 380px;
+        margin: 0 auto;
+    }
+
+    .blog_item {
+        width: 100%;
+        margin-bottom: 30px;
+    }
+
+    .blog_item:last-child {
+        margin-bottom: 0;
+    }
+
+    /* Footer */
+    .footer_col--first {
+        width: 100%;
+    }
+    .footer_col--second, 
+    .footer_col--third  {
+        width: 100%;
+    }
 }
 
 @media (max-width: 575px) {
+    
     /* Intro */
 
     .intro_suptitle {
@@ -1328,4 +1489,76 @@ opacity: .1;
         bottom: -50px;
         right: -80px;
     }
+  
+    /* Reviews */
+    .reviews {
+        padding: 0;
+    }
+
+    .reviews_photo_works {
+        position: static;
+        margin: 0 auto 20px;
+    }
+
+    .reviews_btn {
+        top: 18%;
+    }
+
 }
+
+
+    /* Logos */
+    .logos {
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+    .logos_item {
+    margin-bottom: 20px;
+    }
+    .logos_img {
+    margin: 0 auto;
+    }
+
+
+    /* Clients */
+    .clients_photo {
+        position: static;
+    }
+    .clients_item {
+        padding-left: 0;
+       text-align: center;
+    }
+    
+    .clients_text::before {
+        margin: 15px auto;
+    }
+
+    /* Blogs */
+    .blogs_img {
+        width: 80px;
+        height: 50px;
+    }
+
+    .blogs_title {
+        font-size: 10px;
+    }
+
+
+
+    /* Subscribe */
+
+    .subscribe {
+        flex-wrap: wrap;
+        max-width: none;
+    }
+
+    .subscribe_input {
+        margin-bottom: 10px;
+        border-right: 1px solid #e7e7e7;
+    }
+
+    .subscribe_input, 
+    .subscribe_btn {
+        width: 100%;
+    }
