--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,8 @@ hr {
     height: 100vh;
     background: url("../images/intro.jpg") center no-repeat;
     background-size: cover;
+    min-height: 820px;
+    position: relative;
 }
 .intro_inner {
 width: 100%;
@@ -89,6 +91,10 @@ text-align: center;
    z-index: 1000;
    padding-top: 30px;
 
+}
+
+.header--fixed {
+    background-color: #eb8b8d;
 }
 
 .header_logo {
@@ -150,6 +156,48 @@ opacity: 1;
     color:#fce38a;
 }
 
+
+/* Nav toggle */
+.nav_toggle {
+    width: 30px;
+    padding: 10px 0;
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    z-index: 1;
+}
+.nav-toogle_item {
+    display: block;
+    width: 100%;
+    height: 3px;
+
+    background-color: #fff;
+
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+}
+
+.nav-toogle_item:before,
+.nav-toogle_item:after {
+    content: "";
+    width: 100%;
+    height: 3px;
+
+    background-color: #fff;
+    position: absolute;
+    left: 0;
+    z-index: 1;
+}
+.nav-toogle_item:before {
+    top: -8px;
+}
+.nav-toogle_item:after {
+    bottom: -8px;
+}
 
 /*Button*/
 .btn {
@@ -1310,6 +1358,12 @@ opacity: .1;
 }
 
 @media (max-width: 770px) {
+
+    /* Intro */
+    .intro {
+        min-height: 650px;
+    }
+
     /* Nav */
     .nav {
         display: none;
@@ -1444,6 +1498,8 @@ opacity: .1;
 @media (max-width: 575px) {
     
     /* Intro */
+
+  
 
     .intro_suptitle {
      font-size: 22px;
