--- a/css/style.css
+++ b/css/style.css
@@ -200,7 +200,18 @@ text-align: center;
     bottom: 0;
     left: 0;
     margin: auto;
+
+    transition: background 0.2s linear;
 }
+
+.nav_toggle.active .nav-toggle_item {
+    background: none;
+}
+
+
+
+
+
 
 .nav-toggle_item:before,
 .nav-toggle_item:after {
@@ -212,12 +223,26 @@ text-align: center;
     position: absolute;
     left: 0;
     z-index: 1;
+
+    transition: transform .2s linear;
 }
 .nav-toggle_item:before {
     top: -8px;
 }
 .nav-toggle_item:after {
     bottom: -8px;
+}
+
+.nav_toggle.active .nav-toggle_item:before {
+    transform-origin: left top;
+    transform: rotate(45deg)
+    translate3d(0px, -2px, 0);
+}
+
+.nav_toggle.active .nav-toggle_item:after {
+    transform-origin: left bottom;
+    transform: rotate(-45deg)
+    translate3d(0px, 3px, 0);
 }
 
 /*Button*/
